<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Task Manager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    
    <!-- Navigation Drawer Menu Items -->
    <string name="all_tasks">All Tasks</string>
    <string name="pending_tasks">Pending Tasks</string>
    <string name="completed_tasks">Completed Tasks</string>
    <string name="other">Other</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
</resources>